[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/game_gui.gd" type="Script" id=1]
[ext_resource path="res://images/arrow_up.png" type="Texture" id=2]
[ext_resource path="res://images/arrow_down.png" type="Texture" id=3]
[ext_resource path="res://images/ResourcesUI.png" type="Texture" id=4]
[ext_resource path="res://images/PopulationIcon.png" type="Texture" id=5]
[ext_resource path="res://images/PointsIcon.png" type="Texture" id=6]
[ext_resource path="res://images/game_over.png" type="Texture" id=7]
[ext_resource path="res://images/congrats.png" type="Texture" id=8]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
width = 100
height = 50
noise = SubResource( 1 )

[sub_resource type="OpenSimplexNoise" id=3]
seed = 5
octaves = 1
period = 256.0
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=4]
width = 200
height = 100
noise = SubResource( 3 )

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.05261
margin_right = -1.05261
script = ExtResource( 1 )

[node name="constructions_panel" type="ScrollContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -285.0
margin_top = 20.0
margin_right = -12.0
margin_bottom = -20.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="constructions_panel"]

[node name="stats_panel" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 9.14264
margin_top = 9.14261
margin_right = 234.143
margin_bottom = 362.143
color = Color( 0.309804, 0.34902, 0.329412, 0 )

[node name="population" type="Label" parent="stats_panel"]
margin_left = 60.0
margin_top = 144.0
margin_right = 128.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
text = "Population"

[node name="swap_50_res_to_points" type="Button" parent="stats_panel"]
margin_left = 20.297
margin_top = 50.0
margin_right = 48.297
margin_bottom = 72.0
hint_tooltip = "Move half Resources to Points, but you lose 25 %"
icon = ExtResource( 2 )

[node name="swap_50_points_to_res" type="Button" parent="stats_panel"]
margin_left = 63.45
margin_top = 50.0
margin_right = 91.45
margin_bottom = 72.0
hint_tooltip = "Move half Points to Resources, but you lose 25 %"
icon = ExtResource( 3 )

[node name="resources" type="Label" parent="stats_panel"]
margin_left = 60.0
margin_top = 80.0
margin_right = 128.0
margin_bottom = 94.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.784314, 0.588235, 1 )
text = "Resources"

[node name="points" type="Label" parent="stats_panel"]
margin_left = 60.0
margin_top = 15.0
margin_right = 129.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.588235, 0.784314, 1, 1 )
text = "Points"

[node name="TextureRect" type="TextureRect" parent="stats_panel"]
margin_left = 5.85736
margin_top = 77.8574
margin_right = 53.8574
margin_bottom = 111.857
hint_tooltip = "Resources"
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="stats_panel"]
margin_left = 5.85736
margin_top = 141.857
margin_right = 53.8574
margin_bottom = 175.857
hint_tooltip = "Population"
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="stats_panel"]
margin_left = 13.8574
margin_top = 10.8574
margin_right = 49.8574
margin_bottom = 42.8574
hint_tooltip = "Points"
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="era" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -289.0
margin_top = 52.0
margin_right = -119.0
margin_bottom = 66.0
rect_scale = Vector2( 3, 3 )
text = "Era"
align = 1

[node name="era_progress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = 16.0
margin_right = 92.0
margin_bottom = 46.0
max_value = 5.0
value = 3.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 4 )
tint_under = Color( 0.811765, 0.12549, 0.12549, 1 )
tint_progress = Color( 1, 0.890196, 0, 1 )
nine_patch_stretch = true

[node name="game_over_msg" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="goto_menu_btn" type="Button" parent="game_over_msg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 58.0
margin_right = 68.0
margin_bottom = 78.0
hint_tooltip = "Half Resources to Points"
text = "Back to main menu"

[node name="congrats_msg" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 4
[connection signal="pressed" from="stats_panel/swap_50_res_to_points" to="." method="_on_swap_50_res_to_points_pressed"]
[connection signal="pressed" from="stats_panel/swap_50_points_to_res" to="." method="_on_swap_50_points_to_res_pressed"]
[connection signal="pressed" from="game_over_msg/goto_menu_btn" to="." method="_on_goto_menu_btn_pressed"]
